# Stm8Template

./: CMakeLists.txt  README.md  custom-compiler-sdcc-stm8.yaml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/MISC_INSTALL_FILES/CLionConfig/tools/: External Tools.xml
.devcontainer/MISC_INSTALL_FILES/etc/udev/rules.d/: 49-stlinkv2-REW.rules
.devcontainer/MISC_INSTALL_FILES/root/: .bash_history
DockerImage/: Dockerfile  buildAndTag.sh
DockerImage/MISC_INSTALL_FILES/CLionConfig/options/linux/: toolchains.xml
DockerImage/MISC_INSTALL_FILES/openocd/scripts/board/: REW_stm8s.cfg
DockerImage/MISC_INSTALL_FILES/root/: .bash_history
MyProject/: CMakeLists.txt
MyProject/inc/: clock.h  stm8s_conf.h
MyProject/src/: clock.c  main.c  stm8s_it.c
SPLHeaderOnlyProject/: CMakeLists.txt
SPLHeaderOnlyProject/inc/: stm8s_conf.h  stm8s_it.h
SPLHeaderOnlyProject/src/: assert_fail.c  main.c
lib/STM8_SPL/: CMakeLists.txt  inc  src
